--- a/index.html
+++ b/index.html
@@ -2,23 +2,63 @@
 <html>
     <head></head>
     <body>
-        <h1> Meu Perfil  </h1>
+
+        <img src="https://i.pinimg.com/736x/f4/7e/f2/f47ef2fc44e4b240943e0cef8946074b.jpg" height="300" alt="Foto de perfil" /></p>
+
+        <h1> Meu Perfil </h1>
         <p>
             Olá, me chamo Hugo Lobo e aqui listo diversos itens favoritos meus em formato de top 5!
         </p>
-        <h2>
-            Jogos
-        </h2>
-        <ul>
-            <li> Top 1: <a href="https://www.minecraft.net/pt-br">Minecraft</a></li>
-            <li> Top 2: <a href="https://store.steampowered.com/app/381210/Dead_by_Daylight/">Dead by Daylight</a></li>
-            <li> Top 3: <a href="https://playvalorant.com/pt-br/">Valorant</a></li>
-            <li> Top 4: <a href="https://store.steampowered.com/app/322330/Dont_Starve_Together/">Don't Starve</a></li>
-            <li> Top 5: <a href="https://store.steampowered.com/app/1145360/Hades/">Hades</a></li>
-        </ul>
+        <p><a href="https://hugolobo22.github.io/fe1-01-apresentacao/">Minha primeira atividade</a></p>
+        <h2> Letra de Música </h2>
+        <p>
+            It starts with one
+            <br>
+            All I know
+            <br>
+            It's so 
+            <br>
+            Watch you go
+        as</p>
+        <p>
+            I tried so hard and got so far
+            <br>
+            But in the end, it doesn't even matter
+            <br>
+            I had to fall to lose it all
+            <br>
+            But in the end, it doesn't even matter
+            <br>
+        </p>
+        <img src="https://upload.wikimedia.org/wikipedia/pt/5/52/Linkin_in_the_end_single_cover.png" height="300" alt="" />
         <h3>
-            Animes/Mangás
+            Jogos
         </h3>
+        <ul>
+            <li> Top 1: <a href="https://www.minecraft.net/pt-br">Minecraft</a>
+                <p>
+                    <img src="https://www.minecraft.net/content/dam/games/minecraft/key-art/Games_Subnav_Minecraft-300x465.jpg" height="300" alt="" /></p>
+            </li>
+            <li> Top 2: <a href="https://store.steampowered.com/app/381210/Dead_by_Daylight/">Dead by Daylight</a>
+                <p>
+                    <img src="https://wallpapers.com/images/hd/dead-by-daylight-logo-text-on-trapper-2tph6mbzrsgxlqla.jpg" height="300" alt="" /></p>
+            </li>
+            <li> Top 3: <a href="https://playvalorant.com/pt-br/">Valorant</a>
+                <p>
+                    <img src="https://seeklogo.com/images/V/valorant-logo-FAB2CA0E55-seeklogo.com.png" height="300" alt="" /></p>
+            </li>
+            <li> Top 4: <a href="https://store.steampowered.com/app/322330/Dont_Starve_Together/">Don't Starve</a>
+                <p>
+                    <img src="https://assets-prd.ignimgs.com/2021/12/16/dont-starve-together-button-fin-1639685166951.jpg" height="300" alt="" /></p>
+            </li>
+            <li> Top 5: <a href="https://store.steampowered.com/app/1145360/Hades/">Hades</a>
+                <p>
+                    <img src="https://i.ytimg.com/vi/Bz8l935Bv0Y/maxresdefault.jpg" height="300" alt="" /></p>
+            </li>
+        </ul>
+        <h4>
+            Animes/Mangás
+        </h4>
         <ul>
             <li> Top 1: <a href="https://www.amazon.com.br/Jujutsu-Kaisen-Batalha-Feiticeiros-Vol/dp/6555122072">Jujutsu Kaisen</a></li>
             <li> Top 2: <a href="https://www.amazon.com.br/Attack-Titan-1-Hajime-Isayama/dp/1612620248">Attack on Titan</a></li>
