--- a/index.html
+++ b/index.html
@@ -1,6 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rubik+Burned&display=swap" rel="stylesheet">
+
+        <title>Meu Perfil / Front End - 01</title>
+        <style>
+            body { background-color: #f0ece2; }
+
+            h1 { 
+                color: #dfd3c3; 
+                font-size: 40px;
+                background-color: #596e79;
+                font-family: rubik burned ;
+                text-align: center;
+            }
+
+            h2 { 
+                color: #dfd3c3; 
+                background-color: #596e79;
+                text-align: center;
+                font-family: bebas neue;
+            }
+
+            li {
+                color: #596e79;
+            }
+            a {
+                color: #596e79;
+            }
+        </style>
+    </head>
     <body>
 
         <img src="https://i.pinimg.com/736x/f4/7e/f2/f47ef2fc44e4b240943e0cef8946074b.jpg" height="300" alt="Foto de perfil" /></p>
@@ -14,12 +46,12 @@
         <p>
             It starts with one
             <br>
-            All I know
+            One thing, I don't know why
             <br>
-            It's so 
+            It doesn't even matter how hard you try 
             <br>
-            Watch you go
-        as</p>
+            Keep that in mind, I designed this rhyme
+        </p>
         <p>
             I tried so hard and got so far
             <br>
@@ -31,9 +63,9 @@
             <br>
         </p>
         <img src="https://upload.wikimedia.org/wikipedia/pt/5/52/Linkin_in_the_end_single_cover.png" height="300" alt="" />
-        <h3>
+        <h2>
             Jogos
-        </h3>
+        </h2>
         <ul>
             <li> Top 1: <a href="https://www.minecraft.net/pt-br">Minecraft</a>
                 <p>
@@ -56,15 +88,30 @@
                     <img src="https://i.ytimg.com/vi/Bz8l935Bv0Y/maxresdefault.jpg" height="300" alt="" /></p>
             </li>
         </ul>
-        <h4>
+        <h2>
             Animes/Mangás
-        </h4>
+        </h2>
         <ul>
-            <li> Top 1: <a href="https://www.amazon.com.br/Jujutsu-Kaisen-Batalha-Feiticeiros-Vol/dp/6555122072">Jujutsu Kaisen</a></li>
-            <li> Top 2: <a href="https://www.amazon.com.br/Attack-Titan-1-Hajime-Isayama/dp/1612620248">Attack on Titan</a></li>
-            <li> Top 3: <a href="https://www.amazon.com.br/One-Punch-Man-1-V%C3%A1rios-Autores/dp/8542603621">One Punch Man</a></li>
-            <li> Top 4: <a href="https://www.amazon.com.br/Black-Clover-1-Y%C3%BBki-Tabata/dp/8542611268">Black Clover</a></li>
-            <li> Top 5: <a href="https://www.amazon.com.br/Demon-Slayer-Kimetsu-Yaiba-Vol/dp/1974700526">Demons Slayer</a></li>
+            <li> Top 1: <a href="https://www.amazon.com.br/Jujutsu-Kaisen-Batalha-Feiticeiros-Vol/dp/6555122072">Jujutsu Kaisen</a>
+                <p>
+                    <img src="https://static.wikia.nocookie.net/dublagem/images/5/5e/JujutsuK_Poster1.png/revision/latest?cb=20210220124602&path-prefix=pt-br" height="300" alt="" /></p>
+            </li>
+            <li> Top 2: <a href="https://www.amazon.com.br/Attack-Titan-1-Hajime-Isayama/dp/1612620248">Attack on Titan</a>
+                <p>
+                    <img src="https://static.wikia.nocookie.net/shingekinokyojin/images/d/d8/Attack_on_Titan_Season_1.jpg/revision/latest?cb=20211005182832" height="300" alt="" /></p>
+            </li>
+            <li> Top 3: <a href="https://www.amazon.com.br/One-Punch-Man-1-V%C3%A1rios-Autores/dp/8542603621">One Punch Man</a>
+                <p>
+                    <img src="https://www.crunchyroll.com/imgsrv/display/thumbnail/480x720/catalog/crunchyroll/d8eed44e3d48097ab5fd36b6815fc18e.jpe" height="300" alt="" /></p>
+            </li>
+            <li> Top 4: <a href="https://www.amazon.com.br/Black-Clover-1-Y%C3%BBki-Tabata/dp/8542611268">Black Clover</a>
+                <p>
+                    <img src="https://m.media-amazon.com/images/M/MV5BN2FlYjYxMTMtZGQzYy00OWU2LTkyYWMtNWJhODhmZmM0N2FhXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_FMjpg_UX1000_.jpg" height="300" alt="" /></p>
+            </li>
+            <li> Top 5: <a href="https://www.amazon.com.br/Demon-Slayer-Kimetsu-Yaiba-Vol/dp/1974700526">Demons Slayer</a>
+                <p>
+                    <img src="https://image.api.playstation.com/vulcan/ap/rnd/202106/1704/JzL1NLQvok7Pghe9W5PP2XNV.png" height="300" alt="" /></p>
+            </li>
         </ul>
     </body>
 </html>
