--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rubik+Burned&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&family=Rubik+Broken+Fax&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="style.css">
         <title>Meu Perfil / Front End - 01</title>
     </head>
     <body>
 
-        <img id = "perfil" src="https://i.pinimg.com/736x/f4/7e/f2/f47ef2fc44e4b240943e0cef8946074b.jpg" height="300" alt="Foto de perfil" /></p>
+        <img id = "perfil" src="Perfil.gif" height="300" alt="Foto de perfil" /></p>
 
         <h1> Meu Perfil </h1>
         <p>
             Olá, me chamo Hugo Lobo e aqui listo diversos itens favoritos meus em formato de top 5!
         </p>
-        <p><a href="https://hugolobo22.github.io/fe1-01-apresentacao/">Minha primeira atividade</a></p>
+        <p><a href="https://hugolobo22.github.io/fe1-01-apresentacao/">😮❔</a></p>
        
         <h2> Letra de Música </h2>
         <p>
